--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,18 @@
                 android:resource="@xml/searchable" />
         </activity>
 
+        <activity
+            android:name=".recog.ActivityUiDialog"
+            android:configChanges="orientation|keyboardHidden|screenLayout"
+            android:label="在线识别（带对话框界面）"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category
+                    android:name="com.baidu.speech.recognizerdemo.intent.category.SAMPLE_CODE"/>
+            </intent-filter>
+        </activity>
+
         <provider
             android:name="net.micode.notes.data.NotesProvider"
             android:authorities="micode_notes"
