--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,4 +20,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation project(path: ':core')
+    implementation project(':uiasr')
+    implementation project(':uidialog')
 }
