--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 10 11:04:28 CST 2019
-sdk.dir=C\:\\Users\\76905\\AppData\\Local\\Android\\Sdk
+#Mon Jan 14 09:19:35 CST 2019
+sdk.dir=D\:\\AndroidSDK
