--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <activity
             android:name=".ui.NoteEditActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:launchMode="singleTop"
+            android:launchMode="standard"
             android:theme="@style/NoteTheme" >
 
             <intent-filter>
@@ -79,17 +79,7 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-        <activity
-            android:name=".recog.ActivityUiDialog"
-            android:configChanges="orientation|keyboardHidden|screenLayout"
-            android:label="在线识别（带对话框界面）"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category
-                    android:name="com.baidu.speech.recognizerdemo.intent.category.SAMPLE_CODE"/>
-            </intent-filter>
-        </activity>
+
 
         <provider
             android:name="net.micode.notes.data.NotesProvider"
